@@ -5,7 +5,14 @@
 ! in the root directory of the present distribution,
 ! or http://www.gnu.org/copyleft/gpl.txt .
 !
-#if defined(__XSD)
+#if defined(__OLDXLM)
+! 
+MODULE qexsd_input
+  IMPLICIT NONE
+  INTEGER :: dummy__
+END MODULE qexsd_input
+!
+#else
 !---------------------------------------------------------
 MODULE qexsd_input
 !--------------------------------------------------------
@@ -703,13 +710,6 @@ MODULE qexsd_input
    !
    !------------------------------------------------------------------------------------------------------------ 
 END MODULE qexsd_input          
-         
-#else
-! 
-MODULE qexsd_input
-  IMPLICIT NONE
-  INTEGER :: dummy__
-END MODULE qexsd_input
 ! 
 #endif
   
