@@ -46,9 +46,8 @@ CONTAINS
       !
       USE ions_base,      ONLY : nat, ityp, zv
       USE klist,          ONLY : tot_charge, nelec
-#if ! defined (__XSD)
+#if defined (__OLDXML)
       USE pw_restart,     ONLY : pw_readfile
-#else
 #endif
       USE io_files,       ONLY : prefix, tmp_dir
       USE path_variables, ONLY : restart
@@ -78,7 +77,7 @@ CONTAINS
             tmp_dir = TRIM( tmp_dir_saved ) // TRIM( prefix ) // "_" // &
                  TRIM( int_to_char( i ) ) // "/"
             !
-#if ! defined (__XSD)
+#if defined (__OLDXML)
             CALL pw_readfile('fcpopt', ierr)
 #else
             CALL errore('fcp_opt_routines','XSD implementation pending',1)
