@@ -27,10 +27,10 @@ SUBROUTINE punch( what )
   USE ions_base,            ONLY : nsp
   USE funct,                ONLY : get_inlc
   USE kernel_table,         ONLY : vdw_table_name, kernel_file_name
-#if defined (__XSD) 
-  USE pw_restart_new,       ONLY : pw_write_schema, pw_write_binaries
-#else
+#if defined (__OLDXML) 
   USE pw_restart,           ONLY : pw_writefile
+#else
+  USE pw_restart_new,       ONLY : pw_write_schema, pw_write_binaries
 #endif
   USE a2F,                  ONLY : la2F, a2Fsave
   USE wavefunctions_module, ONLY : evc
@@ -58,7 +58,11 @@ SUBROUTINE punch( what )
   END IF
   iunpun = 4
   !
-#if defined(__XSD)
+#if defined(__OLDXML)
+  !
+  CALL pw_writefile( TRIM( what ) )
+  !
+#else
   !
   ! ...New-style I/O with xml schema and (optionally) hdf5 binaries
   !
@@ -106,11 +110,6 @@ SUBROUTINE punch( what )
      END IF  
       !
   END IF
-#else
-  !
-  ! ...Old-style I/O
-  !
-  CALL pw_writefile( TRIM( what ) )
   !
 #endif
   !
