@@ -1,3 +1,9 @@
+Incompatible changes in svn version:
+
+  * The new xml format with schema is now the default. Use configure option
+    "--disable-xml", or add -D__OLDXML to MANUAL_FLAGS in make.inc, to revert
+    to the old xml format
+
 New in 6.1 version:
 
   * Hybrid functionals: Band parallelization over pair of bands, contributed
